# manatal

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_20_1920-39b1866e0f70_user_create.py  4183d598c7df_create_user_table.py  956e5c7088a9_update_user_table.py
src/: database.py  dependencies.py  main.py
src/config/: __init__.py  base.py  development.py  local.py  production.py
src/core/: database.py  jinja2.py  utils.py
src/core/cache/backends/redis/: __init__.py  client.py
src/users/: __init__.py  models.py  router.py  schemas.py  service.py
templates/users/: user_info.html
